# NetImguiSokol

./: CMakeLists.txt  README.md
src/: CMakeLists.txt
src/NetImguiClient/: CMakeLists.txt  main.cpp
src/NetImguiServerApp/: CMakeLists.txt  NetImguiServerApp.html  main.cpp
src/NetImguiServerApp/Source/: NetImguiServer_App.h  NetImguiServer_Config.cpp  NetImguiServer_Network.cpp  NetImguiServer_RemoteClient.cpp  NetImguiServer_UI.cpp
src/NetImguiServerApp/Source/Sokol/: NetImguiServer_App_Sokol.cpp  NetImguiServer_HAL_Sgfx.cpp
src/NetImguiServerApp/Source/Win32DX11/: NetImguiServer_App_win32dx11.cpp  NetImguiServer_HAL_dx11.cpp  NetImguiServer_HAL_win32.cpp
src/NetImguiServerApp/Source/html5/: NetImguiServer_App_emsc.cpp  NetImguiServer_HAL_Sgfx.cpp  NetImguiServer_HAL_emsc.cpp
src/SokolImgui/: CMakeLists.txt  main.cpp
